# bd-pipeline

./: CLAUDE.md  README.md  output.txt  pyproject.toml
.github/workflows/: python-package.yml
bd_pipeline/: __init__.py  analyze.py  cbz.py  cli.py  index.py  models.py  ocr.py  pipeline.py  prompts.py  search.py
tests/: conftest.py  test_analyze.py  test_cbz.py  test_cli.py  test_index.py  test_ocr.py  test_pipeline.py  test_search.py
